Added images to HTML

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="./resources/images/mission-zulu-logo.png" alt="Mission Zulu Logo" >
+    <img src="./resources/images/mission-zulu-logo-white.png" alt="Mission Zulu Logo" >
     <ul>
       <li><a href="#about-us">About Us</a></li>
       <li>Careers</li>
@@ -17,7 +17,7 @@
   </header>
 
   <main>
-    <img src=""  alt="">
+    <img src="./resources/images/mission-zulu-logo-black.png"  alt="Mission Zulu Logo">
     <h1>
       Mission Zulu<br>
       Game Studios
@@ -29,7 +29,7 @@
 
   <section id="about-us">
     <div class="statement">
-      <img src=""  alt="">
+      <img src="./resources/images/alex-haney-o4x4sieRzI4-unsplash.jpg"  alt="Alex Haney playing Fortnight">
       <p>
         Our mission is to create the best games in the industry. We will push
         technology to its limits to create the most immersive experiences for
@@ -37,7 +37,7 @@
       </p>
     </div>
     <div class="statement">
-      <img src=""  alt="">
+      <img src="./resources/images/florian-olivo-Mf23RF8xArY-unsplash.jpg"  alt="Florian Olivio in esports competition">
       <p>
         Our vision is to create, innovate, and deliver the best gaming
         experience possible to everyone.
