--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mssion Zulu</title>
+  <link rel="stylesheet" href="./resources/css/reset.css">
   <link rel="stylesheet" href="./resources/css/index.css">
 </head>
 <body>
@@ -18,35 +19,54 @@
 
   <main>
     <img src="./resources/images/mission-zulu-logo-black.png"  alt="Mission Zulu Logo">
-    <h1>
-      Mission Zulu<br>
-      Game Studios
-    </h1>
-    <p class="slogan">
-      "Create Your Own Legend"
-    <p>
+    <div>
+      <h1>
+        Mission Zulu<br>
+        Game Studios
+      </h1>
+      <p class="slogan">
+        "Create Your Own Legend"
+      <p>
+    </div>
   </main>
+
+
+  
 
   <section id="about-us">
     <div class="statement">
-      <img src="./resources/images/alex-haney-o4x4sieRzI4-unsplash.jpg"  alt="Alex Haney playing Fortnight">
-      <p>
-        Our mission is to create the best games in the industry. We will push
-        technology to its limits to create the most immersive experiences for
-        our customers and push forward the gaming industry.
-      </p>
+      <div class="center">
+        <div class="image-container">
+          <img src="./resources/images/alex-haney-o4x4sieRzI4-unsplash.jpg"  alt="Alex Haney playing Fortnight">
+        </div>
+        <div class="content">
+          <h3>Our Mission</h3>
+          <p>
+            Our mission is to create the best games in the industry. We will push
+            technology to its limits to create the most immersive experiences for
+            our customers and push forward the gaming industry.
+          </p>
+        </div>
+      </div>
     </div>
     <div class="statement">
-      <img src="./resources/images/florian-olivo-Mf23RF8xArY-unsplash.jpg"  alt="Florian Olivio in esports competition">
-      <p>
-        Our vision is to create, innovate, and deliver the best gaming
-        experience possible to everyone.
-      </p>
+      <div class="center">
+        <div class="image-container">
+          <img src="./resources/images/florian-olivo-Mf23RF8xArY-unsplash.jpg"  alt="Florian Olivio in esports competition">
+        </div>
+        <div class="content">
+          <h3>Our Vission</h3>
+          <p>
+            Our vision is to create, innovate, and deliver the best gaming
+            experience possible to everyone.
+          </p>
+        </div>
+      </div>
     </div>
   </section>
 
   <footer id="contact-us">
-    <h3>Contact Us</h3>
+    <h4>Contact Us</h4>
     <p>Mobile: 123-456-7890</p>
     <p>Address: 123 Anywhere St. Dallas, TX</p>
     <p>Email: hello@gmail.com</p>
